--- a/T02/T02/T02.csproj
+++ b/T02/T02/T02.csproj
@@ -148,6 +148,9 @@
     <Compile Include="EntityFramework\sp_ListarVehiculos_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="EntityFramework\sp_ListarVehiculo_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="EntityFramework\sp_LVendedores_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
